/* tslint:disable */
/* eslint-disable */
/**
 * BUILD.ING API
 * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 *
 * The version of the OpenAPI document: v1
 * 
 *
 * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * https://openapi-generator.tech
 * Do not edit the class manually.
 */


// May contain unused imports in some cases
// @ts-ignore
import type { Building } from './building';
// May contain unused imports in some cases
// @ts-ignore
import type { User } from './user';

/**
 * 
 * @export
 * @interface Organization
 */
export interface Organization {
    /**
     * 
     * @type {number}
     * @memberof Organization
     */
    'organizationId'?: number;
    /**
     * 
     * @type {string}
     * @memberof Organization
     */
    'name'?: string | null;
    /**
     * 
     * @type {string}
     * @memberof Organization
     */
    'description'?: string | null;
    /**
     * 
     * @type {Date}
     * @memberof Organization
     */
    'createdAt'?: Date;
    /**
     * 
     * @type {boolean}
     * @memberof Organization
     */
    'isActive'?: boolean;
    /**
     * 
     * @type {Array<User>}
     * @memberof Organization
     */
    'users'?: Array<User> | null;
    /**
     * 
     * @type {Array<Building>}
     * @memberof Organization
     */
    'buildings'?: Array<Building> | null;
}

